# SO_proyecto

./: Boolean.h  CMakeLists.txt  Clock.c  Clock.h  DebugPrints.c  DebugPrints.h  IComponenteTemporizable.h  Loader.c  Loader.h  Machine.c  Machine.h  PCB.c  PCB.h  ProcessGenerator.c  ProcessGenerator.h  ProcessQueue.c  ProcessQueue.h  Scheduler.c  Scheduler.h  Semaforo.c  Semaforo.h  Temporizador.c  Temporizador.h  globals.h  main.c  utils.c  utils.h
Machine/: CPU.c  CPU.h  Core.c  Core.h  HiloHardware.c  HiloHardware.h  MMU.c  MMU.h  Machine.c  Machine.h  PhysicalMemory.c  PhysicalMemory.h
Poker/: Baraja.c  Baraja.h  Carta.c  Carta.h  EvaluadorManos.c  EvaluadorManos.h  Partida.c  Partida.h  PokerUtils.c  PokerUtils.h  SklanskyMalmuth.c  SklanskyMalmuth.h
prometheus/: prometheus
